# async_arch_course

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
_template/migrations/versions/: 2022_10_02_1629_c9a1ca69a509_init.py
_template/src/models/: general.py
_template/src/routes/: files.py
_template/src/schemas/: auth.py
_template/src/utils/: time_utils.py  utils.py
auth_service/: Dockerfile  pyproject.toml
auth_service/migrations/: env.py
auth_service/migrations/versions/: 2022_10_09_1825_e6a3cc121686_init_migration.py  2022_10_09_1902_815fc57bf0da_base_roles_and_system_user.py  2022_10_09_2142_f35c181fe48e_add_events_table.py
auth_service/src/: main.py  run.py
auth_service/src/core/: config.py  constants.py
auth_service/src/core/crud/: retrieve.py
auth_service/src/dependecies/: __init__.py  auth.py  event_producer.py  session.py
auth_service/src/events/: __init__.py  event_streamer.py
auth_service/src/internals/: events.py  users.py
auth_service/src/models/: general.py
auth_service/src/routes/: auth.py  users.py
auth_service/src/schemas/: auth.py  errors.py  roles.py  users.py
auth_service/src/utils/: auth.py  passwords.py  time_utils.py
common/events/: constants.py
common/events/messages/: auth.py  base_schema.py  tracker.py
common/kafka_utils/: config.py  consumer.py  producer.py  shared.py
docs/architecture/: readme.md
docs/before_course_architecture/: readme.md
project1/src/: main.py
tracker/src/: run.py
tracker_service/: alembic.ini.example
tracker_service/src/: main.py
(+35 files in other folders)
