[tool.poetry]
name = "async-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "async_course"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.78.0,<0.79.0"
pydantic = ">=1.9.1,<1.10.0"
SQLAlchemy = ">=1.4.39,<1.5.0"
starlette = ">=0.19.1,<0.20.0"
uvicorn = ">=0.17.6,<0.18.0"
asyncpg = ">=0.25.0,<0.26.0"
aiofiles = ">=0.8.0,<0.9.0"
python-multipart = ">=0.0.5,<0.1.0"
alembic = ">=1.8.0,<1.9.0"
psycopg2 = ">=2.9.3,<2.10.0"


[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs-dev = ">=0.3.3,<0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
